# waffy

./: CONCEPT.md  README.md
compiler/: go.mod
compiler/cmd/waffy-compile/: main.go
compiler/cmd/waffy-ctl/: main.go
compiler/internal/compiler/: compiler.go  compiler_test.go
compiler/internal/profile/: profile.go
docker/: Dockerfile.compiler  Dockerfile.e2e  Dockerfile.learn  Dockerfile.nginx  Dockerfile.test-go  Dockerfile.test-python  docker-compose.yml  nginx-waffy.conf
learn/: pyproject.toml
learn/tests/: test_analyzer.py  test_profiler.py
learn/waffy_learn/: __init__.py  analyzer.py  capture.py  cli.py  config.py  patterns.py  profiler.py
nginx-module/: config  ngx_http_waffy_module.c  waffy_parser.c  waffy_parser.h  waffy_rule_engine.c  waffy_rule_engine.h  waffy_shm.c  waffy_shm.h  waffy_types.h
rules/examples/: GET_api_v1_search.yaml  POST_api_v1_users.yaml
test/fixtures/: sample_log.jsonl
test/integration/: e2e_test.sh  run_e2e.sh
