[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waffy-learn"
version = "0.1.0"
description = "Traffic learning engine for waffy whitelist application firewall"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
waffy-learn = "waffy_learn.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
